--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <header>
-        <img class="header-logo" src="ロゴ.png">
+        <img class="header-logo" src="ミニ版ロゴ.png">
         <div class="header-list">
-         <a href="#">◁BACK TO TOP</a>
-        <a href="#">NEXT▷</a>
+            
+         <a class="back" href="#">◁BACK</a>
+        <a class="next" href="#">NEXT▷</a>
+         
         </div>        
 
     </header>
